base/src/test/resources/failure/counterexamples/not-in-ctx.aya.txt
In file $FILE:11:36 ->

   9 |  | a, suc b => suc (addN a b)
  10 | 
  11 | example def add1 (a : Nat) : Nat => addN (suc zero) a
                                           ^--^

Error: The unqualified name referred to by `addN` is not defined in the current scope
Resolving interrupted due to error(s).
What are you doing?
